# SentryCompanionMcp

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
src/sentry_companion_mcp/: client.py  server.py
src/sentry_companion_mcp/tools/: deploys.py  issues.py  release_health.py
